# mentaws

./: README.MD  buildspec.yml  pyproject.toml
.github/workflows/: test.yml
mentaws/: aws_operations.py  cf_template.yml  config.py  cryptographic_operations.py  delete_mfa.py  main.py  mentaws_user.py  operations.py
sementara/: aws_operations.py  config.json  config.py  cryptographic_operations.py  exceptions.py  main.py  operations.py
tests/: config  load_credentials.py  settings.py  test_00_initialize.py  test_01_mentaws.py  test_01_operations.py  test_02_aws_operations.py  test_02_mentaws_negative.py  test_03_mentaws_cli.py  test_04_keyring.py  test_98_mentaws.py  test_99_mentaws.py  test_99_unsetup.py  test_mentaws.py  test_sementara.py
