[tool.poetry]
name = "sementara"
version = "0.4.0"
description = "Temporary AWS credentials"
authors = ["keithrozario <keith@keithrozario.com>"]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.14.20"
cryptography = "^2.9.2"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"

[tool.poetry.scripts]
sementara = "sementara.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
