[tool.poetry]
name = "mentaws"
version = "0.6.0"
description = "moMENTary AWS credentials"
authors = ["keithrozario <keith@keithrozario.com>"]
repository = "https://github.com/keithrozario/mentaws"
homepage = "https://github.com/keithrozario/mentaws"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
readme = "README.MD"
license = "MIT"
keywords = ["aws", "mentaws", "tokens", "credentials", "temporary"]


[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.14.20"
cryptography = "^2.9.2"
PyYAML = "^5.3.1"
keyring = "^21.4.0"
click = "^7.1.2"
python-coveralls = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"
pytest-cov = "^2.10.1"
coveralls = "^2.2.0"
coverage = "^5.3"

[tool.poetry.scripts]
mentaws = "mentaws.main:main"
mts = "mentaws.main:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/keithrozario/lambda_cache/issues"
"Docs" = "https://lambda-cache.readthedocs.io"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
